# global

./: Cargo.toml  README.md
singleton/: Cargo.toml
singleton/src/: lib.rs
src/: lib.rs
