[package]
name = "global-static"
description = "Lazily evaluated non-constant static items"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JamieH01/global"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
