workspace = { members = ["singleton"] }
[package]
name = "global-static"
description = "Lazily evaluated non-constant static items"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JamieH01/global"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ctor = ["dep:ctor"]
singleton = ["dep:singleton", "ctor"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ctor = { version = "0.2.6", optional = true }
singleton = { package = "global-static-singleton", version = "0.1.1", path = "./singleton", optional = true }
