[package]
name = "singleton"
version = "0.1.0"
edition = "2021"
description = "global-static macro sister crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.48"
